# Reachy_Mini_conversation

./: README.md  __init__.py  asr.py  audio.py  brain.py  config.py  dance_emotion_moves.py  gradio_personality.py  main.py  pyproject.toml  robot.py  tts.py  utils.py
actions/: __init__.py  move_queue.py  poses.py
audio_animation/: head_wobbler.py  speech_tapper.py
profiles/default/: instructions.txt  tools.txt  voice.txt
reachymini_conversation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: __init__.py  core_tools.py  dance.py  idle_do_nothing.py  move_head.py  stop_dance.py  tool_constants.py
